unpackaged/main/default/objects/project_cloud__Project__c/project_cloud__Project__c.object-meta.xml
<CustomObject>
    <description>Top level information about the project such as the name of the project, project manager, and project start and end dates.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>