unpackaged/main/default/objects/project_cloud__Project__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>Calculated Currency or Rollup for Net Price From Software PPT line</description>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>