unpackaged/main/default/objects/project_cloud__Project__c/fields/Card_Created__c.field-meta.xml
<CustomField>
    <fullName>Card_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Created</label>
    <type>Checkbox</type>
</CustomField>