unpackaged/main/default/objects/project_cloud__Project__c/fields/ccpe_ocp__Account__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>