unpackaged/main/default/objects/project_cloud__Project__c/fields/ccpe_ocp__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity the Project is related to</description>
    <inlineHelpText>Opportunity the Project is related to</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>