unpackaged/main/default/objects/project_cloud__Project__c/fields/ccpe_r__Budget_Usage__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Budget_Usage__c</fullName>
    <formula>ccpe_r__Total_Actual_Costs__c /  ccpe_r__Total_Budgeted_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Usage to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>