unpackaged/main/default/objects/project_cloud__Project__c/fields/ccpe_r__Budgeted_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Budgeted_Labor_Cost__c</fullName>
    <label>Budgeted Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>