unpackaged/main/default/objects/project_cloud__Project__c/fields/ccpe_r__Rate__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Rate__c</fullName>
    <label>Calculated Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>