unpackaged/main/default/objects/project_cloud__Project__c/fields/ccpe_r__Total_Actual_Costs__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Total_Actual_Costs__c</fullName>
    <formula>project_cloud__Expenses_Actual__c + ccpe_r__Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>