unpackaged/main/default/objects/project_cloud__Project__c/fields/Contracted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Hours__c</fullName>
    <label>Contracted Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>