unpackaged/main/default/objects/project_cloud__Project__c/fields/Cost_Performance_Index__c.field-meta.xml
<CustomField>
    <fullName>Cost_Performance_Index__c</fullName>
    <formula>Earned_Value__c / ccpe_r__Total_Actual_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Performance Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>