unpackaged/main/default/objects/project_cloud__Project__c/fields/Cost_Variance__c.field-meta.xml
<CustomField>
    <fullName>Cost_Variance__c</fullName>
    <formula>/*Earned_Value__c -  ccpe_r__Total_Actual_Costs__c*/

 Earned_Value__c  -  project_cloud__Worked_Hours__c</formula>
    <label>Cost Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>