unpackaged/main/default/objects/project_cloud__Project__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Project Due Date</label>
    <type>DateTime</type>
</CustomField>