unpackaged/main/default/objects/project_cloud__Project__c/fields/Earned_Value__c.field-meta.xml
<CustomField>
    <fullName>Earned_Value__c</fullName>
    <formula>(ccpe_r__Total_Budgeted_Costs__c)*  project_cloud__Completed_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>