unpackaged/main/default/objects/project_cloud__Project__c/fields/Estimate_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>Estimate_at_Completion__c</fullName>
    <formula>/*ccpe_r__Total_Budgeted_Costs__c /  Cost_Performance_Index__c*/

 (  project_cloud__Worked_Hours__c  +  project_cloud__Estimated_Hours__c  -  Earned_Value__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate at Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>