unpackaged/main/default/objects/project_cloud__Project__c/fields/Estimate_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Estimate_to_Complete__c</fullName>
    <formula>/* (ccpe_r__Budgeted_Labor_Cost__c *  project_cloud__Completed_Percent__c) / ( ccpe_r__Budgeted_Labor_Cost__c *( project_cloud__Worked_Hours__c /  project_cloud__Estimated_Hours__c ))*/

 Estimate_at_Completion__c  -  project_cloud__Worked_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>