unpackaged/main/default/objects/project_cloud__Project__c/fields/Implementation_start_date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_start_date__c</fullName>
    <label>Implementation start date</label>
    <type>DateTime</type>
</CustomField>