unpackaged/main/default/objects/project_cloud__Project__c/fields/Installation_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Commencement_Date__c</fullName>
    <label>Installation Commencement Date</label>
    <type>DateTime</type>
</CustomField>