unpackaged/main/default/objects/project_cloud__Project__c/fields/Installation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Installation_Fee__c</fullName>
    <label>Installation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>