unpackaged/main/default/objects/project_cloud__Project__c/fields/Internal_Priority__c.field-meta.xml
<CustomField>
    <fullName>Internal_Priority__c</fullName>
    <label>Internal Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>