unpackaged/main/default/objects/project_cloud__Project__c/fields/Labels__c.field-meta.xml
<CustomField>
    <fullName>Labels__c</fullName>
    <label>Labels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>