unpackaged/main/default/objects/project_cloud__Project__c/fields/Manage_Project_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Manage_Project_Priorities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manage Project Priorities</label>
    <type>Checkbox</type>
</CustomField>