unpackaged/main/default/objects/project_cloud__Project__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>