unpackaged/main/default/objects/project_cloud__Project__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>We have created this field as per the Data dictionary Update to add in the list view this will not be used in the Page Layout</description>
    <formula>IF(Owner:Queue.QueueName = &quot;&quot;, (Owner:User.FirstName + &quot; &quot; + Owner:User.LastName), Owner:Queue.QueueName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>