unpackaged/main/default/objects/project_cloud__Project__c/fields/Planned_Value__c.field-meta.xml
<CustomField>
    <fullName>Planned_Value__c</fullName>
    <label>Planned Value</label>
    <summarizedField>project_cloud__Project_Phase__c.Plan_Value__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>