unpackaged/main/default/objects/project_cloud__Project__c/fields/Planned_Value_Depricate__c.field-meta.xml
<CustomField>
    <fullName>Planned_Value_Depricate__c</fullName>
    <formula>ccpe_r__Total_Budgeted_Costs__c * (project_cloud__Worked_Hours__c / project_cloud__Estimated_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Value (Depricate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>