unpackaged/main/default/objects/project_cloud__Project__c/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <formula>Account_Plant__r.Plant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Name</label>
    <type>Text</type>
</CustomField>