unpackaged/main/default/objects/project_cloud__Project__c/fields/PPT_Reference__c.field-meta.xml
<CustomField>
    <fullName>PPT_Reference__c</fullName>
    <description>REQ-2691 :- Created field to have reference between PPT and Project while auto creating project records</description>
    <label>PPT Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>