unpackaged/main/default/objects/project_cloud__Project__c/fields/Program_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Program_Name_Formula__c</fullName>
    <description>We have created this field as per the Data dictionary Update to add in the list view this will not be used in the Page Layout</description>
    <formula>Program_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>