unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Approved_Budget__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Approved_Budget__c</fullName>
    <inlineHelpText>A Currency field used indicate the budgeted amount that has been authorized for the project.</inlineHelpText>
    <label>Approved Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>