unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Autonomous_End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Autonomous_End__c</fullName>
    <description>User entered value indicating the desired end date of the Project.</description>
    <inlineHelpText>The end date desired for the Project.</inlineHelpText>
    <label>Desired End Date</label>
    <type>Date</type>
</CustomField>