unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Autonomous_Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Autonomous_Start__c</fullName>
    <description>User entered value indicating the desired start date of the Project.</description>
    <inlineHelpText>The start date desired for the Project.</inlineHelpText>
    <label>Desired Start Date</label>
    <type>Date</type>
</CustomField>