unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Benefits_Planned__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Benefits_Planned__c</fullName>
    <inlineHelpText>A Currency field used indicate the total amount of planned benefits on a project. When entering financial benefit records, this field will summarize related expense records with the &quot;Planned&quot; type or allows for manual entry.</inlineHelpText>
    <label>Total Planned Benefits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>