unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Budget_Status__c</fullName>
    <inlineHelpText>A picklist field used to indicate the status of the budget.</inlineHelpText>
    <label>Budget Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>