unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The &#39;Business Unit&#39; within the company that this project is related to</inlineHelpText>
    <label>Business Unit</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The business unit selected is not a child business unit, please select a business unit which belongs to a parent business unit</errorMessage>
        <filterItems>
            <field>project_cloud__Business_Unit__c.project_cloud__Parent__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>Search for a child business unit which belongs to a parent business unit</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Business_Unit__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>