unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Calculated_End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Calculated_End__c</fullName>
    <description>This is the calculated end date for the project. It is the earlier of the end date of the earliest task and the desired end date of the project</description>
    <formula>IF(ISBLANK(project_cloud__End__c), project_cloud__Autonomous_End__c, IF(project_cloud__Autonomous_End__c &gt; project_cloud__End__c, project_cloud__Autonomous_End__c, project_cloud__End__c))</formula>
    <inlineHelpText>The calculated end date of the Project, derived from the Desired End Date and the Calculated End Date of the latest Project Task.</inlineHelpText>
    <label>Calculated End Date</label>
    <type>Date</type>
</CustomField>