unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Calculated_Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Calculated_Start__c</fullName>
    <description>This is the calculated start date for the project. It is the earlier of the start date of the earliest task and the desired start date of the project</description>
    <formula>IF(ISBLANK(project_cloud__Start__c), project_cloud__Autonomous_Start__c, IF(project_cloud__Autonomous_Start__c &lt; project_cloud__Start__c, project_cloud__Autonomous_Start__c, project_cloud__Start__c))</formula>
    <inlineHelpText>The calculated start date of the Project, derived from the Desired Start Date and the Calculated Start Date of the earliest Project Task.</inlineHelpText>
    <label>Calculated Start Date</label>
    <type>Date</type>
</CustomField>