unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a system field indicating which project template (or project) this project was cloned from</description>
    <inlineHelpText>Shows the Name of a project/template that the Project was cloned from.</inlineHelpText>
    <label>Cloned From</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Cloned Projects</relationshipLabel>
    <relationshipName>Cloned_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>