unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Color_Tag_Set__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Color_Tag_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines a set of custom color tags that are used by project tasks</description>
    <label>Color Tag Set</label>
    <referenceTo>project_cloud__Color_Tag_Set__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>