unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Completed_Percent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Shows a rollup summary of Completion % from Phase and Task levels.</inlineHelpText>
    <label>Completion (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>