unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Customer_Collaboration_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Customer_Collaboration_Group_Id__c</fullName>
    <description>Relationships to the CollaborationGroup objects are not permitted, so a text field containing the Salesforce Id is used instead.</description>
    <inlineHelpText>The value of this field should be the Salesforce Id of the chatter group you wish to link to this Project.</inlineHelpText>
    <label>Customer Collaboration Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>